--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,10 @@ body {
   align-items: center;
   height: 100vh;
   justify-content: center;
-  background: url("https://images.unsplash.com/photo-1499002238440-d264edd596ec?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  background-image: url(./calming-serene-ocean-abstract-260nw-687455338\ \(1\).webp);
   background-size: cover;
   overflow: hidden;
 }
-
 h2 {
   text-transform: uppercase;
   letter-spacing: 4px;
@@ -18,16 +17,13 @@ h2 {
   text-align: center;
   color: white;
 }
-
 .clock {
   display: flex;
 }
-
 .clock div {
   margin: 5px;
   position: relative;
 }
-
 .clock span {
   width: 100px;
   height: 80px;
@@ -40,7 +36,6 @@ h2 {
   font-size: 50px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
-
 .clock .text {
   height: 30px;
   font-size: 10px;
@@ -49,7 +44,6 @@ h2 {
   background: darkblue;
   opacity: 0.8;
 }
-
 .clock #ampm {
   bottom: 0;
   position: absolute;
