--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   align-items: center;
   height: 100vh;
   justify-content: center;
-  background-image: url("./calming-serene-ocean-abstract-260nw-687455338\ \(1\).webp");
+  background-image: url(./jasper-lake.jpg);
   background-size: cover;
   overflow: hidden;
 }
